--- a/smartfarm_page/templates/str_smartfarm1.html
+++ b/smartfarm_page/templates/str_smartfarm1.html
@@ -32,7 +32,7 @@
         <section class="pt-4 bg-light">
             <div class="container px-xl-6 bg-light">
                 <!-- 상단 딸기 이미지 삽입-->
-                <div class="img-fluid" style="height:350px; opacity: 0.6; background-repeat: no-repeat; background-image: url('../static/smartfarm_page/assets/img/str_bg.png');">
+                <div class="img-fluid" style="height:350px; opacity: 0.6; background-repeat: no-repeat; background-image: url('../../static/smartfarm_page/assets/img/str_bg.png');">
                 </div>
                 <div class="row gx-lg-5">
                     <h2 class="text-center">이번 주 딸기 생산량 예측</h2>
