--- a/smartfarm_page/templates/kids_pattern1.html
+++ b/smartfarm_page/templates/kids_pattern1.html
@@ -94,7 +94,7 @@
                 <br>
                 <div class="form-group">
                     <label for="exampleInputName" style="font-size:15px;">이름</label>
-                    <input  name="name" type="text" class="form-control" id="exampleInputName" placeholder="Name" style="height:45px;font-size:15px;">
+                    <input  name="name" type="text" class="form-control" id="exampleInputName" placeholder="Name" style="height:45px;font-size:15px;" required>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputcheck" style="font-size:15px;">어린이집</label>
