--- a/smartfarm_page/templates/result.html
+++ b/smartfarm_page/templates/result.html
@@ -63,7 +63,7 @@
       <ul id="nav-top" class="nav navbar-nav navbar-right">
          <li><a href="{% url 'main'%}" class="page-scroll">Home</a></li>
          <li><a href="{% url 'str_smartfarm1'%}" class="page-scroll">딸기 스마트팜</a></li>
-         <li><a href="#" class="page-scroll">영유아 스마트 케어</a></li>
+         <li><a href="{% url 'kids_pattern1'%}" class="page-scroll">영유아 스마트 케어</a></li>
          <li><a href="{% url 'covid19'%}" class="page-scroll">코로나19 현황 분석</a></li>
       </ul>
     </div>
@@ -77,7 +77,30 @@
 <div id="page-banner">
   <div class="content  wow fdeInUp">
     <div class="container ">
-        <div style="float: left; margin-right:20px; ">
+        <div style="float: right;">
+            <form action="{% url 'pick_date'%}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <div style="float: left; margin-right:20px; "><br><br>
+                    <label  style="font-size:15px; text-align:justify">1. 일별 : 날짜 선택 </label>
+                    <input name="date_pick" type="date" class="form-control"  min="2021-06-01" max="2021-06-18" value="2021-06-01" style="height:45px;width:120;font-size:15px; text-align:justify;">
+                    </div>
+
+                    <div style="float: left; margin-light:20px; "><br><br>
+                        <label for="week" style=" font-size:15px; text-align:justify">2. 요일별</label>
+                    <input type="radio" id="week" name="period" value="week" />
+                        <br></div>
+                        <div style="float: left; margin-light:20px; "><br><br>
+                        <label for="month" style=" font-size:15px; text-align:justify">3. 월별</label>
+                            <input type="radio" id="month" name="period" value="month" /></div>
+                    </div>
+
+            <div style="float: RIGHT; margin-right:20px; "><br><br>
+                        <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 10px;">확인</button>
+                            <br><br>
+                </div>
+                </div>
+            <div style="float: left; margin-right:20px; ">
 
             <h2 style="text-align:justify"><img src="{% static 'smartfarm_page/assets/img/user.png' %}" width="180" height="180" alt=""></h2>
 
@@ -86,17 +109,7 @@
         <div style="float: left;">
             <h4 style="text-align:justify"> <br>이름 : {{name}} <br> 성별 : {{a.values.get.성별}} <br> 생년월일 : {{birth}} <br>어린이집 : {{a.values.get.어린이집}} <br>반 : {{a.values.get.반}}</h4>
         </div>
-        <div style="float: right;">
-            <form action="{% url 'pick_date'%}" method="POST">
-                {% csrf_token %}
-                <div class="form-group">
-                    <div style="float: left; margin-right:20px; ">
-                    <label  style="font-size:15px; text-align:justify"> 날짜 선택 </label>
-                    <input name="date_pick" type="date" class="form-control"  min="2021-06-01" max="2021-06-18" value="2021-06-01" style="height:45px;width:120;font-size:15px; text-align:justify;">
-                    </div>
-                        <div style="float: left; margin-right:20px; "><br><br>
-                        <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 5px;">확인</button>
-                </div></div></div>
+
 
         </form>
 
@@ -157,10 +170,6 @@
       <!--blog posts container-->
       <div class="col-md-offset-3 col-md-6 page-block">
 
-
-        {% for list in students %}
-
-        {% endfor %}
         {% if not_exist %}
             <h2>잘못된 정보입니다. 다시 확인해주세요.</h2>
             <h4><a href="{% url 'kids_pattern1'%}" ><img src="{% static 'smartfarm_page/assets/img/return.png' %}" width="40" height="40" alt=""></a></h4>
