--- a/smartfarm_page/templates/result.html
+++ b/smartfarm_page/templates/result.html
@@ -82,19 +82,18 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <div style="float: left; margin-right:20px; "><br><br>
-                    <label  style="font-size:15px; text-align:justify">1. 일별 : 날짜 선택 </label>
-                    <input name="date_pick" type="date"  class="form-control"  min="2021-06-01" max="2021-06-18" value="2021-06-01" style="height:45px;width:120;font-size:15px; text-align:justify;">
+                        <label  style="font-size:15px; text-align:justify">1. 일별 : 날짜 선택 </label>
+                    <input name="date_pick" type="date"  class="form-control"  min="2021-06-01" max="2022-02-18"  style="height:45px;width:120;font-size:15px; text-align:justify;">
                     </div>
 
                     <div style="float: left; margin-light:20px; "><br><br>
-                        <label for="week" style=" font-size:15px; text-align:justify">2. 요일별</label>
-                    <input type="checkbox" id="week" name="period" value="week" />
-                        </div>
-                        <div style="float: left; margin-light:20px; "><br><br>
-                        <label for="month" style=" font-size:15px; text-align:justify">3. 월별</label>
-                            <input type="checkbox" id="month" name="period" value="month" /></div>
+                        <label style=" font-size:15px; text-align:justify">2. 요일별</label>
+                        <input type="checkbox" name="day[]" value="week" />
                     </div>
-
+                    <div style="float: left; margin-light:20px; "><br><br>
+                        <label style=" font-size:15px; text-align:justify">3. 월별</label>
+                        <input type="checkbox" name="day[]" value="month" /></div>
+                    </div>
             <div style="float: RIGHT; margin-right:20px; "><br><br>
                         <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 10px;">확인</button>
                             <br><br>
@@ -103,57 +102,16 @@
             <div style="float: left; margin-right:20px; ">
 
             <h2 style="text-align:justify"><img src="{% static 'smartfarm_page/assets/img/user.png' %}" width="180" height="180" alt=""></h2>
-
-        </div>
+            </div>
         <br>
         <div style="float: left;">
             <h4 style="text-align:justify"> <br>이름 : {{name}} <br> 성별 : {{a.values.get.성별}} <br> 생년월일 : {{birth}} <br>어린이집 : {{a.values.get.어린이집}} <br>반 : {{a.values.get.반}}</h4>
         </div>
+      </form>
+    </div>
+  </div>
+</div>
 
-
-        </form>
-
-
-<!--
-        <br>
-
-        {% if E %}
-            {% if boy %}
-                <div style="float: right;">
-                    <br><br>
-                    <h6 style="text-align:justify">{{a.values.get.성향}}</h6>
-                    <h4 style="text-align:justify"><img src="{% static 'smartfarm_page/assets/img/boy_60.png' %}"width="200" height="30"></h4>
-                </div>
-                <div style="float: right; margin-right:20px; ">
-                    <h2 style="text-align:justify"><img src="https://img.icons8.com/dusk/120/000000/standing-man.png"/> </h2>
-                </div>
-            {% else %}
-                <div style="float: right;">
-                    <br><br>
-                    <h4 style="text-align:justify"><img src="{% static 'smartfarm_page/assets/img/grl_60.png' %}"width="200" height="30"></h4>
-                </div>
-                <div style="float: right; margin-right:20px; ">
-                    <h2 style="text-align:justify"><img src="https://img.icons8.com/dusk/120/000000/standing-woman.png"/> </h2>
-                </div>
-            {% endif %}
-        {% else %}
-            {% if boy %}
-                <div style="float: right;">
-                    <h4 style="text-align:justify"><img src="{% static 'smartfarm_page/assets/img/boy_20.png' %}"width="200" height="30"></h4>
-                </div>
-                <div style="float: right; margin-right:20px; ">
-                    <h2 style="text-align:justify"><img src="https://img.icons8.com/dusk/120/000000/standing-man.png"/> </h2>
-                </div>
-            {% else %}
-                <div style="float: right;">
-                    <h4 style="text-align:justify"><img src="{% static 'smartfarm_page/assets/img/grl.png' %}"width="200" height="30"></h4>
-                </div>
-                <div style="float: right; margin-right:20px; ">
-                    <h2 style="text-align:justify"><img src="https://img.icons8.com/dusk/120/000000/standing-woman.png"/> </h2>
-                </div>
-        {% endif %}
-        {% endif %}
--->
 <!--
       <h1>영유아 스마트 케어</h1>
 -->
@@ -165,7 +123,7 @@
 <!--page body-->
 
   <div class="container">
-      <br><br><br><br><br>
+      <br><br>
     <div class="row">
       <!--blog posts container
       <div class="col-md-offset-3 col-md-6 page-block">-->
@@ -175,6 +133,8 @@
             <h4><a href="{% url 'kids_pattern1'%}" ><img src="{% static 'smartfarm_page/assets/img/return.png' %}" width="40" height="40" alt=""></a></h4>
           <br><br><br>
         {% else %}
+        <center>
+        <h2>{{date}}</h2><br><br></center>
           <div class="pt-4 bg-light"; style="float: right; padding:0px;">
             <div class="container px-xl-6 bg-light">
                 <div class="col-sm-6">
@@ -184,7 +144,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="chart-area">
-                                    <canvas id="myChart" width="1200" height="500"></canvas>
+                                    <canvas id="heartrate" width="1200" height="700"></canvas>
                                 </div>
                             </div>
                         </div>
@@ -196,15 +156,44 @@
                             </div>
                             <div class="card-body">
                                 <div class="chart-area">
-                                    <canvas id="chart" width="1200" height="500"></canvas>
+                                    <canvas id="stepcount" width="1200" height="700"></canvas>
                                 </div>
                             </div>
                         </div>
                     </div>
-            </div>
+                </div>
+              </div><br><br>
+        <div class="pt-4 bg-light"; style="float: right; padding:0px;">
+            <div class="container px-xl-6 bg-light">
+                <div class="col-sm-6">
+                        <div class="card shadow mb-4">
+                            <div class="card-header py-3">
+                                <h6 class="m-0 font-weight-bold text-primary" >km</h6>
+                            </div>
+                            <div class="card-body">
+                                <div class="chart-area">
+                                    <canvas id="km" width="1200" height="700"></canvas>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <div class="col-sm-6" >
+                        <div class="card shadow mb-4">
+                            <div class="card-header py-3">
+                                <h6 class="m-0 font-weight-bold text-primary">칼로리</h6>
+                            </div>
+                            <div class="card-body">
+                                <div class="chart-area">
+                                    <canvas id="cal" width="1200" height="700"></canvas>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
         {% endif %}
 
-          </div>
+        </div>
     </div>
   </div>
  </div>
@@ -213,7 +202,7 @@
 
 
 
-        #<footer class="footer bg-light" style="background-color:#DCDCDC">
+        <footer class="footer bg-light" style="background-color:#DCDCDC">
             <div class="row mb-5"></div>
             <br><br><br>
             <div class="container">
@@ -277,63 +266,33 @@
 
         <!-- Page level custom scripts -->
         <script src="{% static 'smartfarm_page/js/chart-area-demo.js' %}"></script>
-        // 차트를 그릴 영역으로 canvas태그를 사용한다.
+
 
 <script>
 // 차트를 그럴 영역을 dom요소로 가져온다.
-var chartArea = document.getElementById('myChart').getContext('2d');
-// 차트를 생성한다.
-var myChart = new Chart(chartArea, {
-    // ①차트의 종류(String)
-    type: 'bar',
-    // ②차트의 데이터(Object)
-    data: {
-        // ③x축에 들어갈 이름들(Array)
-        labels: ['ㅋ','ㅁ'],
-        // ④실제 차트에 표시할 데이터들(Array), dataset객체들을 담고 있다.
-        datasets: [{
-            // ⑤dataset의 이름(String)
-            label: '심박수',
-            // ⑥dataset값(Array)
-            data: {{ HR }},
-            // ⑦dataset의 배경색(rgba값을 String으로 표현)
-            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-            // ⑧dataset의 선 색(rgba값을 String으로 표현)
-            borderColor: 'rgba(255, 99, 132, 1)',
-            // ⑨dataset의 선 두께(Number)
-            borderWidth: 1
-        }]
-    },
-    // ⑩차트의 설정(Object)
-    options: {
-        // ⑪축에 관한 설정(Object)
-        scales: {
-            // ⑫y축에 대한 설정(Object)
-            y: {
-                // ⑬시작을 0부터 하게끔 설정(최소값이 0보다 크더라도)(boolean)
-                beginAtZero: true
-            }
-        }
-    }
-});
-
-
-new Chart(document.getElementById("chart"), {
-              type: 'line',
+new Chart(document.getElementById("heartrate"), {
+            type: 'bar',
               data: {
-                labels: [1,2,3,4] ,
+                labels:['10시', '11시', '12시', '13시', '14시', '15시', '16시'],
                 datasets: [{
-                    data: {{ HR }},
-                    label: '심박수',
-                    borderColor:'rgb(255, 99, 132)',
+                    data: {{ hr_kid }},
+                    label: '개인',
+                    type : 'bar',
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                    borderColor: 'rgba(255, 99, 132, 1)',
+                    borderWidth: 1,
                     fill: false,
                     tension:0
-                  }, {
-                    data: {{ step }},
-                    label: '걸음수',
-                    borderColor: 'rgb(0, 0, 0)',
+                  },
+                  {
+                    data: {{ hr_all }},
+                    label: '평균',
+                    type : 'bar',
+                    backgroundColor: 'rgba(58, 92, 188, 0.29)',
+                    borderColor: 'rgba(58, 92, 188, 0.29)',
+                    borderWidth: 1,
                     fill: false,
-                    tension:0
+                    tension:0,
                   }
                 ]
               },
@@ -347,7 +306,7 @@ new Chart(document.getElementById("chart"), {
                       {
                         scaleLabel: {
                           display: true,
-                          labelString: "Weeks",
+                          labelString: "",
                         },
                          stacked: "true",
                       },
@@ -356,7 +315,204 @@ new Chart(document.getElementById("chart"), {
                       {
                         scaleLabel: {
                           display: true,
-                          labelString: "걸음"
+                          labelString: ""
+                         },
+                      },
+                     ],
+                  },
+                tooltips: {
+                mode:'x',
+                callbacks: {
+                    title : function(tooltipItems, data){
+                        var tooltipItem = tooltipItems[0];
+                            return data.labels[tooltipItem.index];
+                            },
+
+                    label: function(tooltipItems, data) {
+                              return tooltipItems.yLabel;
+                          }
+
+                  }
+                }
+                }
+            });
+
+new Chart(document.getElementById("stepcount"), {
+            type: 'bar',
+              data: {
+                labels:['10시', '11시', '12시', '13시', '14시', '15시', '16시'],
+                datasets: [{
+                    data: {{ sc_kid }},
+                    label: '개인',
+                    type : 'bar',
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                    borderColor: 'rgba(255, 99, 132, 1)',
+                    borderWidth: 1,
+                    fill: false,
+                    tension:0
+                  },
+                  {
+                    data: {{ sc_all }},
+                    label: '평균',
+                    type : 'bar',
+                    backgroundColor: 'rgba(58, 92, 188, 0.29)',
+                    borderColor: 'rgba(58, 92, 188, 0.29)',
+                    borderWidth: 1,
+                    fill: false,
+                    tension:0,
+                  }
+                ]
+              },
+
+              options: {
+                title: {
+                  display: true,
+                },
+                scales: {
+                    xAxes: [
+                      {
+                        scaleLabel: {
+                          display: true,
+                          labelString: "",
+                        },
+                         stacked: "true",
+                      },
+                     ],
+                    yAxes: [
+                      {
+                        scaleLabel: {
+                          display: true,
+                          labelString: ""
+                         },
+                      },
+                     ],
+                  },
+                tooltips: {
+                mode:'x',
+                callbacks: {
+                    title : function(tooltipItems, data){
+                        var tooltipItem = tooltipItems[0];
+                            return data.labels[tooltipItem.index];
+                            },
+
+                    label: function(tooltipItems, data) {
+                              return tooltipItems.yLabel;
+                          }
+
+                  }
+                }
+                }
+            });
+
+            new Chart(document.getElementById("km"), {
+            type: 'bar',
+              data: {
+                labels:['10시', '11시', '12시', '13시', '14시', '15시', '16시'],
+                datasets: [{
+                    data: {{ km_kid }},
+                    label: '심박수',
+                    type : 'bar',
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                    borderColor: 'rgba(255, 99, 132, 1)',
+                    borderWidth: 1,
+                    fill: false,
+                    tension:0
+                  },
+                  {
+                    data: {{km_all}},
+                    label: '평균',
+                    type : 'bar',
+                    borderColor: 'rgba(58, 92, 188, 0.29)',
+                    fill: false,
+                    tension:0,
+                  }
+                ]
+              },
+
+              options: {
+                title: {
+                  display: true,
+                },
+                scales: {
+                    xAxes: [
+                      {
+                        scaleLabel: {
+                          display: true,
+                          labelString: "",
+                        },
+                         stacked: "true",
+                      },
+                     ],
+                    yAxes: [
+                      {
+                        scaleLabel: {
+                          display: true,
+                          labelString: ""
+                         },
+                      },
+                     ],
+                  },
+                tooltips: {
+                mode:'x',
+                callbacks: {
+                    title : function(tooltipItems, data){
+                        var tooltipItem = tooltipItems[0];
+                            return data.labels[tooltipItem.index];
+                            },
+
+                    label: function(tooltipItems, data) {
+                              return tooltipItems.yLabel;
+                          }
+
+                  }
+                }
+                }
+            });
+
+            new Chart(document.getElementById("cal"), {
+            type: 'bar',
+              data: {
+                labels:['10시', '11시', '12시', '13시', '14시', '15시', '16시'],
+                datasets: [{
+                    data: {{ cal_kid }},
+                    label: '심박수',
+                    type : 'bar',
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                    borderColor: 'rgba(255, 99, 132, 1)',
+                    borderWidth: 1,
+                    fill: false,
+                    tension:0
+                  },
+                  {
+                    data: {{ cal_all }},
+                    label: '평균',
+                    type : 'bar',
+                    borderColor: 'rgba(58, 92, 188, 0.29)',
+                    fill: false,
+                    tension:0,
+                  }
+                ]
+              },
+
+              options: {
+                title: {
+                  display: true,
+                },
+                scales: {
+                    xAxes: [
+                      {
+                        scaleLabel: {
+                          display: true,
+                          labelString: "",
+                        },
+                         stacked: "true",
+                      },
+                     ],
+                    yAxes: [
+                      {
+                        scaleLabel: {
+                          display: true,
+                          labelString: ""
                          },
                       },
                      ],
