--- a/smartfarm_page/templates/result.html
+++ b/smartfarm_page/templates/result.html
@@ -78,14 +78,13 @@
   <div class="content  wow fdeInUp">
     <div class="container ">
         <div style="float: right;">
-            <form action="{% url 'pick_date'%}" method="POST">
+            <form action="{% url 'pick_part'%}" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <div style="float: left; margin-right:20px; "><br><br>
-                        <label  style="font-size:15px; text-align:justify">1. 일별 : 날짜 선택 </label>
-                    <input name="date_pick" type="date"  class="form-control"  min="2021-06-01" max="2022-02-18"  style="height:45px;width:120;font-size:15px; text-align:justify;">
+                    <div style="float: left; margin-light:20px; "><br><br>
+                        <label style=" font-size:15px; text-align:justify">1. 일별</label>
+                        <input type="checkbox" name="day[]" value="day" />
                     </div>
-
                     <div style="float: left; margin-light:20px; "><br><br>
                         <label style=" font-size:15px; text-align:justify">2. 요일별</label>
                         <input type="checkbox" name="day[]" value="week" />
@@ -95,17 +94,17 @@
                         <input type="checkbox" name="day[]" value="month" /></div>
                     </div>
             <div style="float: RIGHT; margin-right:20px; "><br><br>
-                        <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 10px;">확인</button>
+                        <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 8px;">확인</button>
                             <br><br>
                 </div>
                 </div>
             <div style="float: left; margin-right:20px; ">
 
-            <h2 style="text-align:justify"><img src="{% static 'smartfarm_page/assets/img/user.png' %}" width="180" height="180" alt=""></h2>
+            <h2 style="text-align:justify"><img src="{% static 'smartfarm_page/assets/img/user.png' %}" width="190" height="190" alt=""></h2>
             </div>
         <br>
         <div style="float: left;">
-            <h4 style="text-align:justify"> <br>이름 : {{name}} <br> 성별 : {{a.values.get.성별}} <br> 생년월일 : {{birth}} <br>어린이집 : {{a.values.get.어린이집}} <br>반 : {{a.values.get.반}}</h4>
+            <h4 style="text-align:justify"> <br>이름 : {{name}} <br> 성별 : {{a.values.get.성별}} <br> 생년월일 : {{birth}} <br> 성향 : {{a.values.get.성향}} <br> 어린이집 : {{a.values.get.어린이집}} <br>반 : {{a.values.get.반}}<br></h4>
         </div>
       </form>
     </div>
@@ -134,6 +133,19 @@
           <br><br><br>
         {% else %}
         <center>
+            {% if day %}
+            <form action="{% url 'pick_date'%}" method="POST">
+                {% csrf_token %}
+                <div style="float: left; margin-right:20px; "><br><br>
+                <label  style="font-size:15px; text-align:justify">1. 일별 : 날짜 선택 </label>
+                <input name="date_pick" type="date"  class="form-control"  min="2021-06-01" max="2022-02-18"  style="height:45px;width:120;font-size:15px; text-align:justify;">
+            </div>
+            <div style="float: left; margin-right:20px; "><br><br><br><br>
+                        <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 5px;">확인</button>
+                            <br><br>
+
+            </div><br><br><br><br><br><br><br>
+                {% endif %}
         <h2>{{date}}</h2><br><br></center>
           <div class="pt-4 bg-light"; style="float: right; padding:0px;">
             <div class="container px-xl-6 bg-light">
@@ -191,6 +203,7 @@
                     </div>
                 </div>
               </div>
+            <a href="./directory/yourfile.pdf" download="newfilename">Download the pdf</a>
         {% endif %}
 
         </div>
