--- a/smartfarm_page/templates/kids_pattern1.html
+++ b/smartfarm_page/templates/kids_pattern1.html
@@ -37,8 +37,14 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+<!-- font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
+
 </head>
-<body class="page" style="background-color:#F3F6F6">
+<body class="page" style="background-color:#F3F6F6; height: 300px;">
 
 <!-- Navigation
     ==========================================-->
@@ -57,10 +63,10 @@
       <!--nav icon end-->
 
       <ul id="nav-top" class="nav navbar-nav navbar-right">
-		   <li><a href="{% url 'main'%}" class="page-scroll">Home</a></li>
-			<li><a href="{% url 'str_smartfarm1'%}" class="page-scroll">딸기 스마트팜</a></li>
-			<li><a href="#" class="page-scroll">영유아 스마트 케어</a></li>
-			<li><a href="{% url 'covid19'%}" class="page-scroll">코로나19 현황 분석</a></li>
+		   <li><a href="{% url 'main'%}" class="page-scroll"style=" color:#525249;">Home</a></li>
+			<li><a href="{% url 'str_smartfarm1'%}" class="page-scroll"style=" color:#525249;">딸기 스마트팜</a></li>
+			<li><a href="{% url 'kids_pattern1' %}" class="page-scroll"style=" color:#525249;">영유아 스마트 케어</a></li>
+			<li><a href="{% url 'covid19'%}" class="page-scroll"style=" color:#525249;">코로나19 현황 분석</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -70,9 +76,11 @@
 
 <!-- banner Page
     ==========================================-->
-<div id="page-banner" style="background-image: url({% static 'smartfarm_page/assets/img/children.jpg' %});">
+<div id="page-banner" style="background-image: url({% static 'smartfarm_page/assets/img/children.png' %});">
   <div class="content  wow fdeInUp">
     <div class="container ">
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+
 <!--
       <h1>영유아 스마트 케어</h1>
 -->
@@ -87,8 +95,8 @@
     <div class="row">
       <!--blog posts container-->
       <div class="col-md-offset-3 col-md-6 page-block">
-          <h1 class="text-center" style="color: #484949;">영유아 스마트 케어</h1><br>
-          <h2 class="text-center">아이의 정보를 입력하세요.</h2><br><br>
+          <h1 class="text-center" style="color: #484949; font-family: 'Jua', sans-serif;">영유아 스마트 케어</h1><br>
+          <h2 class="text-center" style="font-family: 'Jua', sans-serif;">아이의 정보를 입력하세요.</h2><br><br>
             <form action="{% url 'result'%}" method="POST">
                 {% csrf_token %}
                 <br>
